--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>This is DESIGN version V7</h1>
     <p>Welcome to Coder Army</p>
+    <p>I am the best coder</p>
 </body>
 </html>
